Dynamic web implementation

--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -43,7 +43,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/8-places.css') + '?' + cache_id }}">
     
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/font-awesome.css') + '?' + cache_id }}">
-    
+   
+    <!-- ****************************
+	    JAVASCRIPT
+	 **************************** --!>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="{{ url_for('static', filename='scripts/1-hbnb.js') + '?' + cache_id }}"></script>
   </head>
   
 
@@ -136,7 +141,10 @@
 		
 		{% for amenity in amens|sort(attribute='name') %}
 		
-		<LI>{{ amenity.name }}</LI>
+		<LI>
+			<INPUT type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">
+			{{ amenity.name }}
+		</LI>
 		
 		{% endfor %}
 		
