--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -6,6 +6,18 @@ header {
 }
 header .logo {
     background: url("../images/logo.png") no-repeat;
-    left: 20px;
+    margin-left: 20px;
     height: 100%;
+    margin-right: auto;
+}
+header div#api_status {
+	background-color: #CCCCCC;
+	height: 40px;
+	border-radius: 50%;
+	margin-right: 30px;
+	width: 40px;
+	margin-left: auto;
+}
+header div#api_status.available {
+	background-color: #FF545F;
 }
