fix: Update the data-name's value for nonbreaking

--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -46,7 +46,7 @@
             <input
                 type='checkbox'
                 data-id={{ amenity.id }}
-                data-name={{ amenity.name.replace(' ', '_') }}
+                data-name="{{ amenity.name }}"
             />
             {{ amenity.name }}
           </li>
